--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp==3.10.1
 colorama==0.4.6
+eth_account==0.11.2
 eth_typing==4.4.0
 loguru==0.7.2
 pyuseragents==1.0.5
+selenium_driverless==1.9.3.1
 web3==6.20.1
